tests/textual/error/multiplyInteger-list-integer--wrong-1st-argument.uplc
(program 1.0.0[[(builtin multiplyInteger)(con list(integer) [42, 10, 53])](con integer 10)])